; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/mediatek/files-4.19/drivers/net/phy/mtk/mt753x/extr_mt753x_mdio.c_mt753x_remove.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/mediatek/files-4.19/drivers/net/phy/mtk/mt753x/extr_mt753x_mdio.c_mt753x_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { i32 }
%struct.gsw_mt753x = type { i64, i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.platform_device*)* @mt753x_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mt753x_remove(%struct.platform_device* %0) #0 {
  %2 = alloca %struct.platform_device*, align 8
  %3 = alloca %struct.gsw_mt753x*, align 8
  store %struct.platform_device* %0, %struct.platform_device** %2, align 8
  %4 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %5 = call %struct.gsw_mt753x* @platform_get_drvdata(%struct.platform_device* %4)
  store %struct.gsw_mt753x* %5, %struct.gsw_mt753x** %3, align 8
  %6 = load %struct.gsw_mt753x*, %struct.gsw_mt753x** %3, align 8
  %7 = getelementptr inbounds %struct.gsw_mt753x, %struct.gsw_mt753x* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp sge i64 %8, 0
  br i1 %9, label %10, label %14

10:                                               ; preds = %1
  %11 = load %struct.gsw_mt753x*, %struct.gsw_mt753x** %3, align 8
  %12 = getelementptr inbounds %struct.gsw_mt753x, %struct.gsw_mt753x* %11, i32 0, i32 2
  %13 = call i32 @cancel_work_sync(i32* %12)
  br label %14

14:                                               ; preds = %10, %1
  %15 = load %struct.gsw_mt753x*, %struct.gsw_mt753x** %3, align 8
  %16 = getelementptr inbounds %struct.gsw_mt753x, %struct.gsw_mt753x* %15, i32 0, i32 1
  %17 = load i64, i64* %16, align 8
  %18 = icmp sge i64 %17, 0
  br i1 %18, label %19, label %26

19:                                               ; preds = %14
  %20 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %21 = getelementptr inbounds %struct.platform_device, %struct.platform_device* %20, i32 0, i32 0
  %22 = load %struct.gsw_mt753x*, %struct.gsw_mt753x** %3, align 8
  %23 = getelementptr inbounds %struct.gsw_mt753x, %struct.gsw_mt753x* %22, i32 0, i32 1
  %24 = load i64, i64* %23, align 8
  %25 = call i32 @devm_gpio_free(i32* %21, i64 %24)
  br label %26

26:                                               ; preds = %19, %14
  %27 = load %struct.gsw_mt753x*, %struct.gsw_mt753x** %3, align 8
  %28 = call i32 @mt753x_remove_gsw(%struct.gsw_mt753x* %27)
  %29 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %30 = call i32 @platform_set_drvdata(%struct.platform_device* %29, i32* null)
  ret i32 0
}

declare dso_local %struct.gsw_mt753x* @platform_get_drvdata(%struct.platform_device*) #1

declare dso_local i32 @cancel_work_sync(i32*) #1

declare dso_local i32 @devm_gpio_free(i32*, i64) #1

declare dso_local i32 @mt753x_remove_gsw(%struct.gsw_mt753x*) #1

declare dso_local i32 @platform_set_drvdata(%struct.platform_device*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
